--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 		<script src="cytoscape/js/cytoscape-extensions.js"></script>
     <script src="js/ngac.js"></script>
     <script src="js/filehandler.js"></script>
+    <script src="js/graph_data_retrieval.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 
 
     <script>
@@ -112,6 +114,7 @@
               { data: { id: 'Books', name: 'Books' }, classes: 'Object attribute' },
               { data: { id: 'Documents', name: 'Documents' }, classes: 'Object attribute'  },
               { data: { id: 'Team', name: 'Team' }, classes: 'User attribute'  },
+              { data: { id: 'Team2', name: 'Team2' }, classes: 'User attribute'  },
               { data: { id: 'Lord of the rings', name: 'Lord of the rings', parent: 'Books' }, classes: 'Object attribute'  },
 
               // Objects
@@ -131,7 +134,9 @@
             edges: [
               { data: { name: 'Write', source: 'Team', target: 'Books' }, classes: 'edgelabel' },
               { data: { name: 'Read', source: 'Team', target: 'Documents' }, classes: 'edgelabel' },
-              { data: { name: 'Write', source: 'Team', target: 'Lord of the rings' }, classes: 'edgelabel' }
+              { data: { name: 'Write', source: 'Team', target: 'Lord of the rings' }, classes: 'edgelabel' },
+              { data: { name: 'Read', source: 'Team', target: 'Lord of the rings' }, classes: 'edgelabel' },
+              { data: { name: 'Write', source: 'Team2', target: 'Documents' }, classes: 'edgelabel' },
             ]
           }
         });
@@ -171,6 +176,10 @@
 
         document.querySelector('#inputfile').addEventListener('change', function() {
           ngacJS.loadFile();
+        });
+
+        document.querySelector('#get_data_from_graph').addEventListener('click', function() {
+          ngacJS.retrive_data();
         });
 
         cy.panzoom({
@@ -214,6 +223,9 @@
       <input type="file" id="inputfile">
     </div>
 
+    <div class="retrive_data_button">
+      <button id="get_data_from_graph" title="Data retrieval">Data retrieval</button>
+    </div>
 
     <div id="prompt-overlay"></div>
 
