--- a/index.html
+++ b/index.html
@@ -11,16 +11,14 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <link href="cytoscape/css/cytoscape.js-panzoom.css" rel="stylesheet" type="text/css" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <script src="cytoscape/js/dependencies.js"></script>
     <script src="cytoscape/js/cytoscape.min.js"></script>
 		<script src="cytoscape/js/cytoscape-extensions.js"></script>
     <script src="js/ngac.js"></script>
-    <script src="js/filehandler.js"></script>
     <script src="js/db_handler.js"></script>
     <script src="js/graph_data_retrieval.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 
 
     <script>
@@ -31,12 +29,6 @@
 
         var cy = window.cy = cytoscape({
           container: document.getElementById('cy'),
-
-
-          ready: function(){
-            this.layout({name: 'cose-bilkent', animationDuration: 1000}).run();
-          },
-
 
           style: [
             {
@@ -144,10 +136,6 @@
           ngacJS.renderLayout();
         });
 
-        document.querySelector('#inputfile').addEventListener('change', function() {
-          ngacJS.loadFile();
-        });
-
         document.querySelector('#get_data_from_graph').addEventListener('click', function() {
           ngacJS.retrive_data();
         });
@@ -190,10 +178,6 @@
         <i class="fas fa-bezier-curve"></i>
       </button>
 
-    </div>
-
-    <div class="filetest">
-      <input type="file" id="inputfile">
     </div>
 
     <div class="retrive_data_button">
