--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="js/ngac.js"></script>
     <script src="js/db_handler.js"></script>
     <script src="js/graph_data_retrieval.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script> -->
 
 
     <script>
@@ -136,7 +137,7 @@
           ngacJS.renderLayout();
         });
 
-        document.querySelector('#get_data_from_graph').addEventListener('click', function() {
+        document.querySelector('#save-policy').addEventListener('click', function() {
           ngacJS.retrive_data();
         });
 
@@ -178,10 +179,6 @@
         <i class="fas fa-bezier-curve"></i>
       </button>
 
-    </div>
-
-    <div class="retrive_data_button">
-      <button id="get_data_from_graph" title="Save">Save graph policy</button>
     </div>
 
     <div id = "Loader">
@@ -282,6 +279,44 @@
       </div>
       <!-- -->
 
+
+
+    </div>
+
+
+
+
+    <div  id= "db-options" class="db-options">
+
+      <div class="close-button">
+        <button type="button" id="edge-prompt-close" class="btn-close" aria-label="Close"></button>
+      </div>
+
+      <h2>Database options</h2>
+
+      <div class="db-button-group">
+        <button type="button" id="import-user" class="btn btn-primary">
+          <i class="fas fa-user-plus"></i><br>
+          Import User
+        </button>
+
+        <button type="button" id="import-policy" class="btn btn-primary">
+          <i class="fas fa-file-import"></i><br>
+          Import Policy
+        </button>
+
+        <button type="button" id="save-policy"class="btn btn-primary">
+          <i class="fas fa-file-export"></i><br>
+          Save Policy
+        </button>
+
+      </div>
+
+      <div class="ngac-bottom-tag">
+        <h1>NGAC Policy Tool</h1>
+      </div>
+
+      </div>
 
 
     </div>
